docker: ajout prop adminer pour docketu

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
 
   adminer:
     image: adminer
+    command: php -S 0.0.0.0:8080 -t /var/www/html
     container_name: adminer
     networks:
       - salle.net
