--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,11 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "ics-to-json": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "knex": "^3.1.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
