--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,16 +28,17 @@ services:
     ports:
       - "32496:8080"
 
-#  api:
-#    image: 'node:alpine'
-#    command: sh -c "npm i && npm run dev"
-#    volumes:
-#      - ./api:/app
-#    working_dir: /app
-#    networks:
-#      - salle.net
-#    environment:
-#      - NODE_ENV=development
-#      - PORT=3000
-#    ports:
-#      - '32495:3000'
+  api:
+    image: 'node:alpine'
+    command: sh -c "npm i && npm run dev:windows"
+    volumes:
+      - ./api:/app
+    working_dir: /app
+    networks:
+      - salle.net
+    environment:
+      - NODE_ENV=development
+      - PORT=3000
+      - SECRET_KEY=${SECRET_KEY:-secret}
+    ports:
+      - '32495:3000'
