--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "ics-to-json-extended": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
