--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
-  image_picker: ^0.8.6
+  image_picker: ^1.0.7
+  table_calendar: ^3.0.8
   flutter_test:
     sdk: flutter
 
