--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "dev:windows": "nodemon --legacy-watch ./src/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "ics-to-json": "^1.0.0",
