--- a/api/package.json
+++ b/api/package.json
@@ -7,13 +7,15 @@
     "dev:windows": "nodemon --legacy-watch ./src/server.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "ics-to-json": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
