--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -1,17 +1,18 @@
 name: salle_magne
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.0-275.0.dev <4.0.0'
+  sdk: ">=3.4.0-275.0.dev <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  firebase_ml_vision: ^0.12.0+3
 
 dev_dependencies:
   image_picker: ^0.8.6
@@ -19,7 +20,6 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.0
-  
 
 flutter:
   uses-material-design: true
