--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "ical": "^0.8.0",
