--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -1,6 +1,6 @@
 name: salle_magne
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -11,11 +11,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
-
-dev_dependencies:
   image_picker: ^1.0.7
   table_calendar: ^3.0.8
+  cupertino_icons: ^1.0.6
+  google_mlkit_text_recognition: ^0.11.0
+  gallery_picker: ^0.4.8
+
+dev_dependencies:
+
   flutter_test:
     sdk: flutter
 
