--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   image_picker: ^1.0.7
   table_calendar: ^3.0.8
   cupertino_icons: ^1.0.6
+  dot_navigation_bar:
 
   google_mlkit_text_recognition: ^0.11.0
   gallery_picker: ^0.4.8
