--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
 
   google_mlkit_text_recognition: ^0.11.0
   gallery_picker: ^0.4.8
+  google_maps_flutter: ^2.6.0
+  url_launcher: ^6.2.5
 
 
 dev_dependencies:
