--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_maps_flutter: ^2.2.0
   google_mlkit_text_recognition: ^0.11.0
   url_launcher: ^6.2.5
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
