--- a/salle_magne/android/app/src/main/AndroidManifest.xml
+++ b/salle_magne/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:label="salle_magne"
         android:name="${applicationName}"
