--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
   image_picker: ^1.0.7
-  table_calendar: ^3.0.8
+  calendar_view: ^1.1.0
   cupertino_icons: ^1.0.6
 
   dot_navigation_bar:
@@ -21,6 +21,8 @@ dependencies:
   google_mlkit_text_recognition: ^0.11.0
   gallery_picker: ^0.4.8
   url_launcher: ^6.2.5
+  syncfusion_flutter_calendar: ^25.1.38
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
