--- a/salle_magne/pubspec.yaml
+++ b/salle_magne/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
 
   image_picker: ^1.0.7
-
+  flutter_spinkit: ^5.2.1
   cupertino_icons: ^1.0.6
   dot_navigation_bar:
   google_maps_flutter: ^2.2.0
